// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createTheme > should apply values wherever it is used 1`] = `
"@property --background {
    syntax: '<color>';
    inherits: true;
    initial-value: #fff;
}
:root {
    --background: #fff;
    --text: #111;
}
[data-theme="dark"] {
    --background: #111;
    --text: #eee;
}
@media ( prefers-color-scheme : dark ) {
    :root {
        --background: #111;
        --text: #eee;
    }
}"
`;

exports[`defineTokens > should register token() leaves as @property with the default as initial value 1`] = `
"@property --background {
    syntax: '<color>';
    inherits: true;
    initial-value: #fff;
}
@property --radius {
    syntax: '<number>';
    inherits: false;
    initial-value: 4;
}
:root {
    --background: #fff;
    --radius: 4;
    --text: #111;
}"
`;
